--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": false,
     "python.linting.pep8Enabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "venv\\Scripts\\python.exe"
+    "python.pythonPath": "d:\\ManualBackup\\git\\python\\djangomes\\venv\\Scripts\\python.exe"
 }
